--- a/startbootstrap-grayscale-gh-pages/css/mystyle.css
+++ b/startbootstrap-grayscale-gh-pages/css/mystyle.css
@@ -3,22 +3,15 @@
 	src: url(../font/hp.TTF);
 }
 
-
 #video{
+	border-image: url(../img/border.png) 18 stretch;
+}
 
-	transition-property: transform;
-	transition-duration: 5s;
-	transition-delay: 1s;
-	transition-timing-function: cubic-bezier(.33,.32,.69,.77);*/
-	
-	box-shadow:
-                1px 1px #53a7ea,
-                2px 2px #53a7ea,
-                3px 3px #53a7ea;
-        -webkit-transform: translateX(-3px);
-        transform: translateX(-3px);
-	border: solid 30px black;
-	
+#video-control{
+	background-color:transparent;
+	padding: 20px;
+	filter: opacity(50%);
+	transition: all 0.3s ease;
 	border-image: url(../img/border.png) 18 stretch;
 }
 
@@ -77,12 +70,10 @@
 	color: darkred;
 	text-shadow: 0px 0px 10px darkred;
 }
-#video:hover{
-	
-	transition-property: ease;
-	transition-duration: 5s;
-	transition-delay: 1s;
-	transition-timing-function: cubic-bezier(.86,.18,.35,.85);
+#video-control:hover{
+	border-radius: 10px;
+	background-color: #000000a8;
+	filter: opacity(100%);
 }
 /*@keyframes h1 {
 	from {background-color: red;}
