--- a/startbootstrap-grayscale-gh-pages/css/mystyle.css
+++ b/startbootstrap-grayscale-gh-pages/css/mystyle.css
@@ -5,6 +5,8 @@
 
 #video{
 	border-image: url(../img/border.png) 18 stretch;
+	border-style: solid;
+	border-width: 20px;
 }
 
 #video-control{
@@ -12,7 +14,6 @@
 	padding: 20px;
 	filter: opacity(50%);
 	transition: all 0.3s ease;
-	border-image: url(../img/border.png) 18 stretch;
 }
 
 #videos{
@@ -21,7 +22,6 @@
 	background-size: 10%,cover;
 	background-repeat: no-repeat;
 	background-position: 0% 0%, center;
-
 }
 
 @media (min-width:992px){
@@ -37,8 +37,6 @@
 		outline: none;
 		border-bottom: 0.50rem solid #F0D735;
 	  }
-	
-
 }
 
 #videos h1{
@@ -60,21 +58,25 @@
 	 transition-duration: 2s;
 	 text-shadow: #000000;
 	 transform: rotateY(360deg);
-	 }
+}
+
 #videos h3{
 	font-family: hp;
 	color: white;
 	text-shadow: 0px 0px 5px black;
 }
+
 #videos a:hover i{
 	color: darkred;
 	text-shadow: 0px 0px 10px darkred;
 }
+
 #video-control:hover{
 	border-radius: 10px;
 	background-color: #000000a8;
 	filter: opacity(100%);
 }
+
 /*@keyframes h1 {
 	from {background-color: red;}
 	to {background-color: yellow;}
@@ -86,36 +88,49 @@
 		background-color: red;
 		animation-name: h1;
 		animation-duration: 4s;
-	  }*/
+}*/
 
-	#audios h1{
+#audios h1{
 	font-family: hp;
 	color: white;
 	text-shadow: 0px 0px 5px black;
 	transform: rotate(0deg);
-	}
+}
 	
-	#audios h1:hover{
+#audios h1:hover{
 	transform: rotateX(360deg);
 	 transition-duration: 2s;
 	 text-shadow: #000000;
-	 }
+}
 
-	 #audios h2{
+
+#audios h2{
 	font-family: hp;
 	color: white;
 	text-shadow: 0px 0px 5px black;
-	
-	}
+}
 
-	#audios h2:hover{
+#audios h2:hover{
 	transition-timing-function: ease-in;
 	 transition-duration: 2s;
 	 text-shadow: #000000;
 	 transform: rotateY(360deg);
-	 }
+}
 
-	 #audios a:hover i{
+#audios a:hover i{
 	color: darkred;
 	text-shadow: 0px 0px 10px darkred;
-	 
+}
+
+#repro_a{
+	background-color:transparent;
+	padding: 20px;
+	filter: opacity(50%);
+	transition: all 0.3s ease;
+}
+
+#repro_a:hover{
+	border-radius: 10px;
+	background-color: #000000a8;
+	filter: opacity(100%);
+}
