--- a/startbootstrap-grayscale-gh-pages/css/mystyle.css
+++ b/startbootstrap-grayscale-gh-pages/css/mystyle.css
@@ -12,6 +12,7 @@
 #video-control{
 	background-color:transparent;
 	padding: 20px;
+	display: inline-block;
 	filter: opacity(50%);
 	transition: all 0.3s ease;
 }
@@ -75,6 +76,7 @@
 	border-radius: 10px;
 	background-color: #000000a8;
 	filter: opacity(100%);
+	display: inline-block;
 }
 
 /*@keyframes h1 {
@@ -125,6 +127,7 @@
 #repro_a{
 	background-color:transparent;
 	padding: 20px;
+	display: inline-block;
 	filter: opacity(50%);
 	transition: all 0.3s ease;
 }
@@ -133,4 +136,24 @@
 	border-radius: 10px;
 	background-color: #000000a8;
 	filter: opacity(100%);
+	display: inline-block;
+}
+.leg{
+	background-color:black;
+	display: inline-block;
+	padding: 10px;
+	border-radius: 10px;
+	filter: opacity(70%);
+}
+
+.h3{
+	background-color:black;
+	font-family: hp;
+	display: inline-block;
+	padding: 10px;
+	border-radius: 10px;
+	filter: opacity(70%);
+}
+#musica{
+	background-color: antiquewhite;
 }
