--- a/startbootstrap-grayscale-gh-pages/css/mystyle.css
+++ b/startbootstrap-grayscale-gh-pages/css/mystyle.css
@@ -92,6 +92,14 @@
 		animation-duration: 4s;
 }*/
 
+#musica{
+	background-image: url(../img/ondas.png);
+	background-size: 100%,cover;
+	background-repeat: no-repeat;
+	background-position: 0% 0%, 0%, 0%;
+
+}
+
 #audios h1{
 	font-family: hp;
 	color: white;
@@ -172,5 +180,13 @@ color: white;
 }
 }
 #about{
-	background-image: linear-gradient(#474747,black, #452604, #754209, #75620C, #0E5935, #0F6870, #6e819f);
+	background-image: linear-gradient( black,white);
+	
+}
+#par{
+	background-color:black;
+	display: inline-block;
+	filter: opacity(70%);
+	padding: 10px;
+	border-radius: 10px;
 }
