30-04-2019, não sei se está tudo alterado,, mas mechi ontem

--- a/startbootstrap-grayscale-gh-pages/css/mystyle.css
+++ b/startbootstrap-grayscale-gh-pages/css/mystyle.css
@@ -96,7 +96,7 @@
 	background-image: url(../img/ondas.png);
 	background-size: 100%,cover;
 	background-repeat: no-repeat;
-	background-position: 0% 0%, 0%, 0%;
+	background-position: 0%, 0%, 0%;
 
 }
 
